--- a/deployment.yml
+++ b/deployment.yml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: danieliga/argodemo:7
+      - image: danieliga/argodemo:latest
         name: flaskdemo
         resources: {}
 status: {}
